seafile/base/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seafile-redis
  labels:
    app: seafile-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seafile-redis
  template:
    metadata:
      labels:
        app: seafile-redis
    spec:
      containers:
        - name: redis
          image: redis:7.4
          ports:
            - containerPort: 6379
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: seafile-redis
spec:
  selector:
    app: seafile-redis
  ports:
    - port: 6379
      targetPort: 6379
